--- a/styles/index.scss
+++ b/styles/index.scss
@@ -250,6 +250,8 @@ h1.div__heading {
 
 		.portfolio-works {
 			grid-column: 1;
+			margin-left: 5vw;
+			margin-right: 5vw;
 		}
 
 		.contact-form {
