--- a/styles/welcome.scss
+++ b/styles/welcome.scss
@@ -51,3 +51,31 @@ $color2: rgb(254, 255, 225);
 		transform: rotate(-7deg);
 	}
 }
+
+@media only screen and (max-width: 800px) {
+	.header {
+		grid-column: 1;
+
+		#first-line {
+			letter-spacing: -0.2rem;
+		}
+
+		@keyframes glow {
+			from {
+				color: $color1;
+				text-shadow: 0 0 0.625rem $color2, 0 0 1.25rem $color2,
+					0 0 1.875rem $color2, 0 0 2.5rem $color2, 0 0 3.125rem $color2,
+					0 0 3.75rem $color2, 0 0 4.375rem $color2, 0 0 5.625rem $color2;
+			}
+
+			to {
+				color: $color1;
+				text-shadow: 0.1rem 0.15rem 0rem yellow;
+			}
+		}
+
+		#second-line {
+			text-shadow: 0.1rem 0.15rem 0rem $color1;
+		}
+	}
+}
