--- a/styles/about__me.scss
+++ b/styles/about__me.scss
@@ -17,7 +17,8 @@ $color2: rgb(254, 255, 225);
 
 		p {
 			color: white;
-			margin: 0 25vw 1.5rem 25vw;
+			margin: 0 10vw 1.5rem 10vw;
+			text-align: justify;
 		}
 
 		h2 {
@@ -38,7 +39,7 @@ $color2: rgb(254, 255, 225);
 		}
 
 		.avatar {
-			box-shadow: $color2 0px 5px 15px;			
+			box-shadow: $color2 0px 5px 15px;
 			margin-left: auto;
 			margin-right: auto;
 			margin-bottom: 2rem;
