--- a/styles/contact_form.scss
+++ b/styles/contact_form.scss
@@ -2,13 +2,13 @@ $color2: rgb(254, 255, 225);
 $color5: #0d99d7;
 
 .contact-form {
-	.wrapper {	
-		margin-top: 3rem;	
+	.wrapper {
+		margin-top: 3rem;
 		display: flex;
 		align-items: center;
 	}
 
-	.inner {	
+	.inner {
 		margin: auto;
 		background: #27293d;
 		border: 0.625rem solid $color2;
@@ -175,10 +175,20 @@ $color5: #0d99d7;
 		}
 	}
 
-	.success {		
+	.success {
 		p {
 			margin-bottom: 0;
 			margin-top: 2rem;
 		}
 	}
+}
+
+.successMessage {
+	background-color: $color2 !important;
+	color: black !important;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
+	font-size: 1rem !important;
+	display: flex;
+	align-items: center;
 }
