--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,19 +16,27 @@ $danger: #fd5d93;
 
 $body-bg: #1e1e2f;
 
+* {
+	@apply box-border;
+}
+
+html,
+body {
+	@apply p-0
+		m-0;
+}
+
+a {
+	@apply text-inherit
+		no-underline;
+}
+
 html {
-	scroll-behavior: smooth;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-		sans-serif;
-	font-weight: 300;
-	line-height: 1.5;
-	font-size: 100%;
+	@apply scroll-smooth;
 }
 
 body {
-	box-sizing: border-box;
-	background: $body-bg;
+	@apply bg-body-background;
 }
 
 h1.div__heading {
