--- a/components/WorkExperience/workExperience.module.scss
+++ b/components/WorkExperience/workExperience.module.scss
@@ -1,13 +1,13 @@
 .tabsContent li p::before {
-	font-family: 'Font Awesome 6 Free';
-	content: '\f0da';
 	@apply text-primary 
-                font-black 
-                pr-2;
+        font-black 
+        pr-2
+		font-fa6f;
+	content: '\f0da';
 }
 
 .tabsContent h3 {
 	@apply text-base
-	md:text-xl
-	fhd:text-2xl;
+		md:text-xl
+		fhd:text-2xl;
 }
