--- a/components/Skills/skills.module.scss
+++ b/components/Skills/skills.module.scss
@@ -1,43 +1,3 @@
-.root {
-	@apply hero 
-        bg-base-200;
-}
-
-.heroContent {
-	@apply hero-content 
-        text-center;
-}
-
-.heroSubContent {
-	@apply max-w-md
-                md:max-w-lg
-                lg:max-w-xl
-                xl:max-w-2xl
-                2xl:max-w-3xl;
-}
-
-.headerSkills {
-	@apply font-bold 
-        pt-4
-        md:pt-6;
-}
-
-.headerTechSpec {
-	@apply py-2 
-        md:py-4                
-        text-2xl
-        md:text-3xl
-        fhd:text-4xl;
-}
-
-.techSpecSpan {
-	@apply text-primary;
-}
-
-.skillsInfoContainer {
-	@apply grid;
-}
-
 .skillsGrid {
 	@apply row-start-2
         grid 
@@ -60,12 +20,12 @@
                 fhd:text-2xl;
 }
 
-.skillsGrid h6::before {
-	font-family: 'Font Awesome 6 Free';
-	content: '\f0da';
+.skillsGrid h3::before {
 	@apply text-primary 
                 font-black 
-                pr-2;
+                pr-2
+                font-fa6f;
+	content: '\f0da';
 }
 
 .skillsGrid ul {
