newStyles: Update Skills.
Main.jsx, Skill.jsx, skill.module.scss, index.jsx are modified.

Resolves: #19.

--- a/components/Skills/skills.module.scss
+++ b/components/Skills/skills.module.scss
@@ -1,13 +1,13 @@
 .skillsGrid {
-    @apply row-start-2
-        grid 
-        gap-x-2        
+    @apply mt-4        
+        grid
+        gap-x-2
         gap-y-2
         grid-cols-2
         w-60
         mx-auto
         text-start
-        md:w-auto        
+        md:w-auto
         md:gap-x-4
         md:gap-y-4
         md:grid-cols-3
@@ -16,32 +16,31 @@
 
 .skillsGrid h3 {
     @apply text-base
-                md:text-xl
-                fhd:text-2xl;
+        md:text-xl
+        fhd:text-2xl;
 }
 
 .skillsGrid h3::before {
     @apply text-primary 
-                font-black 
-                pr-2
-                font-fa6f;
+        font-black 
+        pr-2
+        font-fa6f;
     content: '\f0da';
 }
 
 .skillsGrid ul {
     @apply mb-2
-                lg:mb-4;
+        lg:mb-4;
 }
 
 .skillsInfoText {
-    @apply row-start-1
-        my-4
+    @apply my-4
         text-justify;
 }
 
 .skillsInfoText p {
     @apply pb-4
-                md:pb-8;
+        md:pb-8;
 }
 
 .skillsInfoText p:nth-of-type(3) {
