--- a/styles/global/index.scss
+++ b/styles/global/index.scss
@@ -1,5 +1,7 @@
+/* stylelint-disable */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @import './base/base.scss';
+/* stylelint-enable */
