--- a/styles/global/index.scss
+++ b/styles/global/index.scss
@@ -4,4 +4,41 @@
 @tailwind utilities;
 
 @import './base/base.scss';
+
+@layer utilities {
+	.disappear {
+		opacity: 0;
+		transition: all 3s;
+	}
+
+	.appear {
+		opacity: 1;
+	}
+
+	.disappearLeft {
+		opacity: 0;
+		filter: blur(5px);
+		transform: translateX(-100%);
+		transition: all 1s;
+	}
+
+	.appearLeft {
+		opacity: 1;
+		filter: blur(0);
+		transform: translateX(0);
+	}
+
+	.disappearRight {
+		opacity: 0;
+		filter: blur(5px);
+		transform: translateX(100%);
+		transition: all 1s;
+	}
+
+	.appearRight {
+		opacity: 1;
+		filter: blur(0);
+		transform: translateX(0);
+	}
+}
 /* stylelint-enable */
